# QS-Tunnel

./: .gitignore  README.md  config_client.json  config_server.json  data_cap.py  data_handler.py  main_client.py  main_server.py  nat_keep_alive_test.py  requirements.txt  spoof_udp_test.py
.github/workflows/: build-apk.yml
android_app/: README.md  data_cap.py  main.py  prepare_sources.sh  pyproject.toml  tunnel_client.py
android_app/utility/: base32.py  dns.py
client_app/: buildozer.spec  main.py
examples/xray_core_hysteria/: hysteria_client.jsonc  hysteria_server.jsonc
examples/xray_core_xhttp_h3/: xhttp_h3_client.jsonc  xhttp_h3_server.jsonc
utility/: dns.py  numba_checksum.py  packets.py
